# VideoInspector

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
blocks/AX-MediaPlayer/src/: AX-MediaPlayer.cxx  AX-MediaPlayer.h  AX-MediaWriter.cxx  AX-MediaWriter.h
blocks/AX-MediaPlayer/src/msw/: AX-MediaPlayerMSWDXGIRenderPath.cxx  AX-MediaPlayerMSWDXGIRenderPath.h  AX-MediaPlayerMSWImpl.cxx  AX-MediaPlayerMSWImpl.h  AX-MediaPlayerMSWWICRenderPath.cxx  AX-MediaPlayerMSWWICRenderPath.h
blocks/Cinder-ImGui/include/: CinderImGui.h
blocks/Cinder-ImGui/lib/imgui/: imgui_impl_opengl3.h
blocks/Cinder-ImGui/proj/cmake/: Cinder-ImGuiConfig.cmake
blocks/Cinder-ImGui/src/: CinderImGui.cpp
blocks/Cinder-NanoVG/include/: ci_nanovg.hpp
blocks/Cinder-NanoVG/proj/cmake/: Cinder-NanoVGConfig.cmake
blocks/Cinder-NanoVG/samples/HelloSvg/vc2013/: HelloSvg.sln  HelloSvg.vcxproj  HelloSvg.vcxproj.filters
blocks/Cinder-NanoVG/samples/HelloWorld/proj/cmake/: CMakeLists.txt
blocks/Cinder-NanoVG/samples/HelloWorld/vc2013/: HelloWorld.sln  HelloWorld.vcxproj  HelloWorld.vcxproj.filters
blocks/Cinder-NanoVG/samples/MultiWindow/vc2013/: MultiWindow.sln  MultiWindow.vcxproj  MultiWindow.vcxproj.filters
blocks/Cinder-NanoVG/samples/RenderToTexture/vc2013/: RenderToTexture.sln  RenderToTexture.vcxproj  RenderToTexture.vcxproj.filters
blocks/Cinder-NanoVG/src/: ci_nanovg.cpp
include/: Resources.h
resources/: Resources.rc
scripts/: insta_downloader.sh
scripts/brave_url_logger_ext/: background.js  content.js  footwork_urls.txt  manifest.json  manifest2.json  notes.txt  popup.html
src/: AxMovie.cpp  AxMovie.h  AxMovieSynced.h  VideoPlayerApp.cpp
src/graphics/: Transform2D.cpp  Transform2D.h  ViewportTransform.h
